--- a/css/style.css
+++ b/css/style.css
@@ -1,74 +1,46 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-.card-resim {
-  width: 150px;
-  height: 150px;
-  border-radius: 100%;
-}
-h1 {
-  margin-top: 1em;
-}
-.tt {
-  text-transform: uppercase;
-}
-
-.tt-c {
-  text-transform: capitalize;
-}
-
-.fw-b {
-  font-weight: bold;
-}
-.m-1 {
-  margin: 1em;
-}
-.m-2 {
-  margin: 2em;
-}
-
-.mr-2 {
-  margin-right: 2em;
-}
-
-.ml-2 {
-  margin-left: 2em;
-}
-
-.mt-03 {
-  margin-top: 0.3em;
-}
-.m-a {
-  margin: auto;
-}
-.ta-c {
+::placeholder{
   text-align: center;
+  font-size: 14px;
+  color: gray;
+  background-position: 40%;
+  background-size: 6%;
 }
 
-.td {
+input.empty {
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    text-decoration: inherit;
+    background-color: #FAFAFA;
+}
+
+.postuserfont {
+  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 15px;
+  color: black;
+}
+
+
+.storyphoto {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  border: 2px solid rgb(238, 39, 82);
+  margin-right: 7px;
+}
+
+.storytext {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 12px;
+  color: black;
+}
+
+.rightpanellinks {
   text-decoration: none;
+  color: lightgrey;
 }
 
-.d-ib {
-  display: inline-block;
-}
-
-.text-red {
-  color: red;
-}
-
-.text-purple {
-  color: purple;
-}
-
-.lst {
-  list-style-type: square;
-}
-
-#vizyon::first-letter,
-#misyon::first-letter {
-  font-size: 200%;
+.rightpanellinks:hover {
+  text-decoration: none;
+  color: lightgrey;
 }
