--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,33 @@
-::placeholder{
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+::placeholder {
   text-align: center;
   font-size: 14px;
   color: gray;
+  background-image: url(/assets/search-solid.svg);
+  background-repeat: no-repeat;
   background-position: 40%;
   background-size: 6%;
 }
 
 input.empty {
-    font-family: FontAwesome;
-    font-style: normal;
-    font-weight: normal;
-    text-decoration: inherit;
-    background-color: #FAFAFA;
+  font-family: FontAwesome;
+  font-style: normal;
+  font-weight: normal;
+  text-decoration: inherit;
+  background-color: #fafafa;
 }
 
 .postuserfont {
-  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 15px;
   color: black;
 }
-
 
 .storyphoto {
   width: 60px;
@@ -29,8 +37,10 @@ input.empty {
   margin-right: 7px;
 }
 
+
 .storytext {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 12px;
   color: black;
 }
@@ -44,3 +54,32 @@ input.empty {
   text-decoration: none;
   color: lightgrey;
 }
+
+.middlearea {
+  max-height: 200px !important;
+}
+
+.card-header,
+.card-footer {
+  background-color: #fff;
+}
+.rightpanel {
+  border: none;
+  background-color: #fff;
+  padding: 0;
+}
+.postuserfont-takip {
+  float: right;
+}
+
+nav {
+  height: 54px;
+  background-color: #fff;
+}
+
+body {
+  background-color: rgba(var(--b3f, 250, 250, 250), 1);
+  padding-top: 65px;
+}
+
+
