to do list projesi tamamlandi
localstorage ilavesi yapilabilir, alert ve confirm fonk. yerine modal ve toast kullanilabilir

--- a/css/style.css
+++ b/css/style.css
@@ -1,37 +1,15 @@
-body {
-    background: black;
-  }
-  
-  .clock {
-    position: relative;
-    text-align: center;
-    color: #e98208;
-    font-size: 60px;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    letter-spacing: 7px;
-  }
-  
-  .text1 {
-    position: relative;
-    text-align: center;
-    color: #e98208;
-    font-size: 50px;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    letter-spacing: 7px;
-  }
-  
-  .text2 {
-    position: relative;
-    text-align: center;
-    color: #e98208;
-    font-size: 40px;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    letter-spacing: 7px;
-    margin-right: 100px;
-    margin-left: 100px;
-  }
-  
-   img {
-       margin-top: 120px;
-       width: 17%;
-  }
+ul > li:hover {
+  background-color: #e9ecef;
+}
+
+ul li.del {
+  background: #ff6666 !important;
+  color: #fff;
+}
+
+ul>li.checked {
+  background: #276678;
+  color: #fff;
+  text-decoration: line-through;
+}
+
